# talkroom

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  auth.py  talkroom.py  users.py
app/core/: __init__.py  config.py  database.py  security.py
app/models/: __init__.py  message.py  talkroom.py  user.py
app/schemas/: auth.py  message.py  user.py
app/services/: __init__.py
app/utils/: dependencies.py  exceptions.py
app/websocket/: connection_manager.py  talkroom_handler.py
docker/: Dockerfile
requirements/: base.txt  dev.txt  prod.txt
scripts/: run_tests.sh
tests/: __init__.py  conftest.py  test_app_health.py  test_auth.py  test_talkroom.py  test_users.py
tests/integration/: __init__.py  test_talkroom_flow.py
